# SpotTutorial

./: .gitignore  README.md
ROS/bags/: joint_data.bag
spot_simulation/: Unity.gitignore
spot_simulation/Assets/: msgbrowser_settings.asset
spot_simulation/Assets/Materials/: flooring.mat
spot_simulation/Assets/Resources/: ROSConnectionPrefab.prefab
spot_simulation/Assets/Scenes/: SpotScene.unity  SpotTutorial.unity
spot_simulation/Assets/Spot/: SpotController.prefab  spot1.prefab
spot_simulation/Assets/Spot/spot_ros-master/: Spot.urdf
spot_simulation/Assets/SpotControllerScripts/: ArticulationJointController.cs  ClockPublisher.cs  FootCollisionPublisher.cs  FootCollisionSensor.cs  InitializeJointAttributes.cs  JointAttributes.cs  ModelStatePublisher.cs  SpotController.cs  SpotControllerInput.cs  SpotJointPositionSubscriber.cs  SpotJointSubscriber.cs
spot_simulation/Logs/: ApiUpdaterCheck.txt
spot_simulation/ProjectSettings/: ProjectSettings.asset
spot_simulation/UserSettings/: EditorUserSettings.asset
src/server/: CMakeLists.txt  package.xml
src/server/config/: params.yaml
src/server/launch/: server.launch
src/server/scripts/: color_publisher.py  float_publisher.py  server_endpoint.py
src/unity_data_conversion/: CMakeLists.txt  package.xml
src/unity_data_conversion/include/unity_data_conversion/: conversion.h
src/unity_data_conversion/launch/: unity_data_conversion.launch
src/unity_data_conversion/src/: conversion_node.cpp
src/unity_data_conversion/src/unity_data_conversion/: conversion.cpp
(+54 files in other folders)
